# K_eye_project

./: .gitignore  CMakeLists.txt  README.md  install.sh  package.xml
config/: dynamixel_joint_controllers.yaml
firmware/: face_track.ino  source.ino
install/: create_udev_rules
launch/: demo.launch  dynamixel_bringup.launch
scripts/: face_position_publisher.py  main.py  sample.py
sounds/: README.md
src/: README.md  face_detection.cpp  face_position_publisher.cpp
test/: move_dynamixel_motor.py  test_dynamixel_motor.py
