<?xml version="1.0"?>
<package>
  <name>eye_see</name>
  <version>0.0.0</version>
  <description>The eye_see package</description>

  <maintainer email="ab.ioryz@gmail.com">iory</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>usb_cam</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>usb_cam</run_depend>

</package>
